--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,21 @@
 
   <title>{{ site.title }}</title>
   <meta name="description" content="{{ site.description }}">
+  <meta name="robots" content= "index, follow">
+
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://ajitfawade.in/">
+  <meta property="og:title" content="{{site.title}}">
+  <meta property="og:description" content="{{site.description}}">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://twitter.com/ajitfawade">
+  <meta property="twitter:title" content="{{site.title}}">
+  <meta property="twitter:description" content="{{site.description}}">
+  <meta property="twitter:image" content="https://twitter.com/ajitfawade/photo">
+
+  <meta name="theme-color" content="#fd7e14">
 
   <link rel="apple-touch-icon" sizes="180x180" href="{{ "/assets/favicon/apple-touch-icon.png" | prepend: site.baseurl }}">
   <link rel="icon" type="image/png" sizes="32x32" href="{{ "/assets/favicon/favicon-32x32.png" | prepend: site.baseurl }}">
