--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
   <title>{{ site.title }}</title>
   <meta name="description" content="{{ site.description }}">
   <meta name="robots" content= "index, follow">
+  <meta name="keywords" content="Ajit Fawade, ajitfawade, josh software, coditas, coditas technologies, software engineer, fullstack, reactjs, react, react-hooks, nodejs, node, expressjs, javascropt, mongodb, postgres, graphql, web developer, developer, engineer">
 
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://ajitfawade.in/">
