updated resume link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
   <meta property="og:url" content="https://ajitfawade.in/">
   <meta property="og:title" content="{{site.title}}">
   <meta property="og:description" content="{{site.description}}">
+  <meta property="og:image" content="https://drive.google.com/file/d/1L5_gEtMGbRBdmOEjQVpSZB-tToMiFQSU/view?usp=sharing">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
