--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,13 +3,13 @@
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-173096066-1"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=GA4 (395905152)"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'UA-173096066-1');
+    gtag('config', 'GA4 (395905152)');
   </script>
 
   <meta charset="utf-8">
